--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Game</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="responsive/mobile.css">
 </head>
 <body>
   <div id="title">
